map populating on NewTripModal

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 REACT_APP_SERVER=http://localhost:3001
 REACT_APP_DOMAIN=<auth0 domain>
 REACT_APP_CLIENTID=<auth0 clientid>
-
+REACT_APP_LOCATIONIQ_API_KEY=
